# v0lk-an

./: .gitignore  CMakeLists.txt
cmake/: compile_shaders.cmake  copy_resources.cmake
fw/: CMakeLists.txt  CMakePresets.json  device_buffer_copy_handler.cpp  device_buffer_copy_handler.h  fw.cpp  fw.h  objects.cpp  objects.h  raii_wrappers.cpp  raii_wrappers.h
fw/shaders/: base.frag  base.vert
include/: device_buffer_copy_handler.hpp  objects.hpp  raii_wrappers.hpp  renderer.hpp
pong/: pong.cpp
samples/: CMakeLists.txt
samples/SPAAAAAAAAACE/: CMakeLists.txt  space.cpp
samples/SPAAAAAAAAACE/models/fisch/: fisch.gltf
samples/pong/: CMakeLists.txt
shaders/: base.frag  base.vert  light.frag  light.vert
src/: CMakeLists.txt  device_buffer_copy_handler.cpp  objects.cpp  raii_wrappers.cpp  renderer.cpp  resource_path.hpp.in
src/extlibs/tinygltf/: tiny_gltf.cpp
